--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -2,11 +2,17 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="AbatabLieutenant.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="RepoZipBaseUrl" Type="System.String" Scope="User">
-      <Value Profile="(Default)">https://github.com/spectrum-health-systems/Abatab/archive/refs/heads/</Value>
+    <Setting Name="DebugMode" Type="System.String" Scope="User">
+      <Value Profile="(Default)">disabled</Value>
     </Setting>
-    <Setting Name="AbatabUatRoot" Type="System.String" Scope="User">
+    <Setting Name="LtntVersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)">2.0.0</Value>
+    </Setting>
+    <Setting Name="LtntRoot" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\AvatoolWebService\Abatab_UAT</Value>
+    </Setting>
+    <Setting Name="RepoUrl" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://github.com/spectrum-health-systems/Abatab/archive/refs/heads/</Value>
     </Setting>
     <Setting Name="DefaultBranch" Type="System.String" Scope="User">
       <Value Profile="(Default)">testbuild</Value>
