--- a/src/Properties/Settings.settings
+++ b/src/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">2.0.0</Value>
     </Setting>
     <Setting Name="LtntRoot" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\AvatoolWebService\Abatab_UAT</Value>
+      <Value Profile="(Default)">C:\Abatab\UAT</Value>
     </Setting>
     <Setting Name="RepoUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://github.com/spectrum-health-systems/Abatab/archive/refs/heads/</Value>
