--- a/src_/App.config
+++ b/src_/App.config
@@ -14,16 +14,16 @@
                 <value>disabled</value>
             </setting>
             <setting name="LtntVersion" serializeAs="String">
-                <value>2.0.0</value>
+                <value>2.1.0</value>
             </setting>
             <setting name="LtntRoot" serializeAs="String">
-                <value>C:\Abatab\UAT</value>
+                <value>C:\AbatabData\Lieutenant</value>
             </setting>
             <setting name="RepoUrl" serializeAs="String">
                 <value>https://github.com/spectrum-health-systems/Abatab/archive/refs/heads/</value>
             </setting>
             <setting name="DefaultBranch" serializeAs="String">
-                <value>testbuild</value>
+                <value>testing</value>
             </setting>
         </AbatabLieutenant.Properties.Settings>
     </userSettings>
