--- a/src_/AbatabLieutenant.csproj
+++ b/src_/AbatabLieutenant.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Session\Session.cs" />
+    <Compile Include="StockData\VerificationList.cs" />
+    <Compile Include="StockData\StockMessage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -56,6 +59,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Verification\PassedArguments.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
