--- a/src/AbatabLieutenant/AbatabLieutenant.csproj
+++ b/src/AbatabLieutenant/AbatabLieutenant.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -12,6 +12,10 @@
     <Description>A simple utility to help manage Abatab deployments.</Description>
     <PackageProjectUrl>https://github.com/spectrum-health-systems/AbatabLieutenant</PackageProjectUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Abacab\src\Abacab\Abacab.csproj" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
