--- a/src/AbatabLieutenant/AbatabLieutenant.csproj
+++ b/src/AbatabLieutenant/AbatabLieutenant.csproj
@@ -5,7 +5,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>5.0.0</Version>
+    <Version>4.2.1.0</Version>
+    <FileVersion>4.2.1.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
